Expand README with setup and texture information
Added detailed setup instructions and texture guidelines.